@@ -32,6 +32,7 @@ version 2.7.0 (??/??/????):
 		* pidgin_dialogs_translators (should not be used by anything but Pidgin)
 		* gtk_imhtmltoolbar_switch_active_conversation
 		* 'paste' signal for GtkIMHtml (more in gtkimhtml-signals.dox)
+		* 'drawing-buddy' signal for gtkblist (more in gtkblist-signals.dox)
 
 version 2.6.6 (02/18/2010):
 	libpurple:
